--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-<div class="col-lg-4" style="background-color: #000; color: #FFF;">Hello</div>
-			<div class="col-lg-4" style="background-color: #000; color: #FFF;">Hello</div>
-			<div class="col-lg-4" style="background-color: #000; color: #FFF;">Hello</div>
+			<div class="col-md-4" style="background-color: #000; color: #FFF;">Hello</div>
+			<div class="col-md-4" style="background-color: #000; color: #FFF;">Hello</div>
+			<div class="col-md-4" style="background-color: #000; color: #FFF;">Hello</div>
 	<div class="container-fluid">
 	
 		<div class="row">
