--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link href="css/navbar-fixed-top.css" rel="stylesheet">
 <title>Insert title here</title>
 </head>
 <body>
