--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
       </div>
     </div>
 
+	
 
     <!-- Carousel
-    ================================================== -->
+    ================================================== --
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -101,11 +101,16 @@
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div class="container marketing">
+	
+    <div class="container-fluid" style="margin-top: 100px;">
 
       <!-- Three columns of text below the carousel -->
+	  <div class="row">
+		
+		<div style="color: 000;">Best Selling</div>
+	  </div>
       <div class="row">
+
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
           <h2>Heading</h2>
