--- a/index.html
+++ b/index.html
@@ -1,92 +1,67 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Reports</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="google" value="notranslate" />
-        <meta name="application-name" content="GeoLocator" />
-        <meta name="description" content="HTML5&#39;s approach to email" />
-        <meta name="application-url" content="https://developer.mozilla.org" />
-        <meta name="google" content="notranslate" />
-        <!--
-        <link rel="canonical" href="https://mail.google.com/mail/" />
-        <link rel="shortcut icon" href="https://ssl.gstatic.com/ui/v1/icons/mail/images/favicon2.ico" type="image/x-icon" />
-        <link rel="alternate" type="application/atom+xml" title="Gmail Atom Feed" href="feed/atom" />
-            -->
-        <script type="text/javascript">
-            // <![CDATA[
-            var options = {
-                enableHighAccuracy: true,
-                timeout: 5000,
-                maximumAge: 0
-            };
+  <head>
+    <title>Place searches</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+      html, body, #map-canvas {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
+      }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script>
+var map;
+var service;
+var infowindow;
 
+function initialize() {
+  var pyrmont = new google.maps.LatLng(50.859216,-0.9839959);
 
-            var x = null;
+  map = new google.maps.Map(document.getElementById('map-canvas'), {
+    center: pyrmont,
+    zoom: 15
+  });
 
-            function success(position) {
-                var lat = position.coords.latitude;
-                var lon = position.coords.longitude;
-                var accuracyInMeters = position.coords.accuracy;
+  var request = {
+    location: pyrmont,
+    radius: 500,
+    query: 'coffee shop'
+  };
+  infowindow = new google.maps.InfoWindow();
+  var service = new google.maps.places.PlacesService(map);
+  //service.nearbySearch(request, callback);
+  service.textSearch(request, callback);
+}
 
+function callback(results, status) {
+  if (status == google.maps.places.PlacesServiceStatus.OK) {
+    for (var i = 0; i < results.length; i++) {
+      createMarker(results[i]);
+    }
+  }
+}
 
-                x.innerHTML = "Latitude: " + position.coords.latitude + "<br>Longitude: " + position.coords.longitude;
-            }
+function createMarker(place) {
+  var placeLoc = place.geometry.location;
+  var marker = new google.maps.Marker({
+    map: map,
+    position: place.geometry.location
+  });
 
+  google.maps.event.addListener(marker, 'click', function() {
+    infowindow.setContent(place.name);
+    infowindow.open(map, this);
+  });
+}
 
-            function error(err)
-            {
-                console.warn('ERROR(' + err.code + '): ' + err.message);
-                x.innerHTML = '<span style="color: red;">No fix on location</span>';
-            }
+google.maps.event.addDomListener(window, 'load', initialize);
 
-            function getLocation() {
-                if (navigator.geolocation) {
-                    // https://developer.mozilla.org/en-US/docs/Web/API/Geolocation.getCurrentPosition
-                    // First of all, realise that the default timeout for getCurrentPosition is infinite(!). 
-                    // That means that your error handler will never be called if getCurrentPosition hangs somewhere on the back end.
-
-                    navigator.geolocation.getCurrentPosition(success, error, options); // Error and optios can be omitted
-                } else {
-                    alert("not supported")
-                    x.innerHTML = "Geolocation is not supported by this browser.";
-                }
-
-            }
-
-
-
-
-
-            document.addEventListener('DOMContentLoaded', function ()
-            {
-                x = document.getElementById("demo");
-                /*fun code to run*/
-                getLocation();
-            })
-
-
-
-
-            // ]]>
-        </script>
-
-
-        <style type="text/css" media="all">
-            html, body {
-                width: 100%;
-                height: 100%;
-                margin: 0px;
-                padding: 0px;
-            }
-
-        </style>
-
-
-    </head>
-    <body>
-        <div id="demo"></div>
-
-    </body>
+    </script>
+  </head>
+  <body>
+    <div id="map-canvas"></div>
+  </body>
 </html>
