--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@ function initialize() {
     navigator.geolocation.getCurrentPosition(function(position) {
       var pyrmont = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
 					//new google.maps.LatLng(50.859216, -0.983995);
-      var infowindow = new google.maps.InfoWindow({
+      var locwindow = new google.maps.InfoWindow({
         map: map,
         position: pyrmont,
         content: 'Location found using HTML5.'
       });
-
-      map.setCenter(pyrmont);
 	  
 	  map.setCenter(pyrmont);
 
@@ -41,7 +39,7 @@ function initialize() {
 		radius: 500,
 		query: 'coffee shop'
 	  };
-	  infowindow = new google.maps.InfoWindow();
+	  locwindow = new google.maps.InfoWindow();
 	  var service = new google.maps.places.PlacesService(map);
 	  //service.nearbySearch(request, callback);
 	  service.textSearch(request, callback);
@@ -50,12 +48,13 @@ function initialize() {
 	  var marker = new google.maps.Marker({
 		  position: pyrmont,
 		  map: map,
+		  content: 'Location found using HTML5.',
 		  icon: image
 	  });
   
 	  google.maps.event.addListener(marker, 'click', function() {
-		infowindow.setContent('My Location');
-		infowindow.open(map, this);
+		locwindow.setContent('My Location');
+		locwindow.open(map, this);
 	  });
     }, function() {
       handleNoGeolocation(true);
