--- a/index.html
+++ b/index.html
@@ -1,121 +1,82 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Place searches</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
-    <script>
-var map;
-var service;
-var infowindow;
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-function initialize() {
-	map = new google.maps.Map(document.getElementById('map-canvas'), {
-		zoom: 15
-	});
-	
-	if(navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(function(position) {
-      var pyrmont = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-					//new google.maps.LatLng(50.859216, -0.983995);
-      var locwindow = new google.maps.InfoWindow({
-        map: map,
-        position: pyrmont,
-        content: 'Location found using HTML5.'
-      });
-	  
-	  map.setCenter(pyrmont);
+    <title>Cover Template for Bootstrap</title>
 
-	  var request = {
-		location: pyrmont,
-		radius: 500,
-		query: 'coffee shop'
-	  };
-	  
-	  infowindow = new google.maps.InfoWindow();
-	  var service = new google.maps.places.PlacesService(map);
-	  //service.nearbySearch(request, callback);
-	  service.textSearch(request, callback);
-	  
-	  var image = 'man.png';
-	  var marker = new google.maps.Marker({
-		  position: pyrmont,
-		  map: map,
-		  content: 'Location found using HTML5.',
-		  icon: image
-	  });
-  
-	  google.maps.event.addListener(marker, 'click', function() {
-		locwindow.setContent('My Location');
-		locwindow.open(map, this);
-	  });
-    }, function() {
-      handleNoGeolocation(true);
-    });
-  } else {
-    // Browser doesn't support Geolocation
-    handleNoGeolocation(false);
-  }
-}
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-function handleNoGeolocation(errorFlag) {
-  if (errorFlag) {
-    var content = 'Error: The Geolocation service failed.';
-  } else {
-    var content = 'Error: Your browser doesn\'t support geolocation.';
-  }
-  var image = 'man.png';
-  var options = {
-    map: map,
-    position: new google.maps.LatLng(60, 105),
-    content: content,
-	icon: image
-  };
-  
-  var marker = new google.maps.Marker({
-		  position: new google.maps.LatLng(60, 105),
-		  map: map,
-		  icon: image
-	  });
+    <!-- Custom styles for this template -->
+    <link href="css/cover.css" rel="stylesheet">
 
-  var infowindow = new google.maps.InfoWindow(options);
-  map.setCenter(options.position);
-}
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
-function callback(results, status) {
-  if (status == google.maps.places.PlacesServiceStatus.OK) {
-    for (var i = 0; i < results.length; i++) {
-      createMarker(results[i]);
-    }
-  }
-}
-
-function createMarker(place) {
-  var placeLoc = place.geometry.location;
-  var marker = new google.maps.Marker({
-    map: map,
-    position: place.geometry.location
-  });
-
-  google.maps.event.addListener(marker, 'click', function() {
-    infowindow.setContent(place.name);
-    infowindow.open(map, this);
-  });
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
-
-    </script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+	<link rel="stylesheet" href="css/font-awesome.css">
   </head>
+
   <body>
-    <div id="map-canvas"></div>
+
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Coffee Finder</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">Nearby</a></li>
+                  <li><a href="#">About</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Coffee Finder</h1>
+            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <p class="lead">
+              <a href="#" class="btn btn-lg btn-default"><i class="fa fa-search"></i>Find Nearby Coffee</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Coffee Finder</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
