--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+	<link href="css/sticky-footer.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
 
@@ -59,18 +59,17 @@
             </p>
           </div>
 
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Coffee Finder</p>
-            </div>
-          </div>
-
+		  
         </div>
 
       </div>
 
     </div>
-
+	<footer class="footer">
+			  <div class="container">
+				<p class="text-muted">Place sticky footer content here.</p>
+			  </div>
+			</footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
