--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Coffee Finder</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -55,21 +55,20 @@
             <h1 class="cover-heading">Coffee Finder</h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default"><i class="fa fa-search"></i>Find Nearby Coffee</a>
+              <a href="maps.html" class="btn btn-lg btn-default"><i class="fa fa-search"></i>Find Nearby Coffee</a>
             </p>
           </div>
 
-		  
+		  <div class="mastfoot">
+            <div class="inner">
+              <p>Coffee Finder 2015</p>
+            </div>
+          </div>
         </div>
 
       </div>
 
     </div>
-	<footer class="footer">
-			  <div class="container">
-				<p class="text-muted">Place sticky footer content here.</p>
-			  </div>
-			</footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
