--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1 class="cover-heading">Coffee Finder</h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
-              <a href="maps.html" class="btn btn-lg btn-default"><i class="fa fa-search"></i>Find Nearby Coffee</a>
+              <a href="map.html" class="btn btn-lg btn-default"><i class="fa fa-search"></i>Find Nearby Coffee</a>
             </p>
           </div>
 
