--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
               <h3 class="masthead-brand">Coffee Finder</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="#">Home</a></li>
+                  <li class="active"><a href="#">Home</a></li>
                   <li><a href="map.html">Nearby</a></li>
-                  <li class="active"><a href="about.html">About</a></li>
+                  <li><a href="#">About</a></li>
                 </ul>
               </nav>
             </div>
