--- a/fav.html.html
+++ b/fav.html.html
@@ -45,8 +45,8 @@
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="map.html">Nearby</a></li>
-				  <li><a href="fav.html">Favourites</a></li>
-                  <li class="active"><a href="#">About</a></li>
+				  <li class="active"><a href="fav.html">Favourites</a></li>
+                  <li><a href="#">About</a></li>
                 </ul>
               </nav>
             </div>
