--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
                   <li><a href="map.html">Nearby</a></li>
+				  <li><a href="fav.html">Favourites</a></li>
                   <li><a href="about.html">About</a></li>
                 </ul>
               </nav>
