--- a/fav.html
+++ b/fav.html
@@ -46,7 +46,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="map.html">Nearby</a></li>
 				  <li class="active"><a href="fav.html">Favourites</a></li>
-                  <li><a href="#">About</a></li>
+                  <li><a href="about.html">About</a></li>
                 </ul>
               </nav>
             </div>
