--- a/fav.html
+++ b/fav.html
@@ -80,9 +80,10 @@
 	<script>
 		var favs = localStorage.getItem("cofeeFinderFavs");
 		arr = favs.split(";");
+		document.getElementById("fav").innerHTML = "";
 		for(var i=0;i<arr.length;i++)
 		{
-			document.getElementById("fav").innerText = arr[i] + "<br>";
+			document.getElementById("fav").innerHTML += arr[i] + "<br>";
 		}
 	</script>
   </body>
