--- a/map.html
+++ b/map.html
@@ -118,7 +118,7 @@ function createMarker(place) {
 		if(place.opening_hours.open_now)
 			content += 'Open now<br>';
 		else
-			content += 'Closed<br>'
+			content += 'Closed now<br>'
 	}
 		
 	
