--- a/fav.html
+++ b/fav.html
@@ -79,6 +79,8 @@
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 	<script>
 		var favs = localStorage.getItem("cofeeFinderFavs");
+		if(favs == null)
+		{ favs = "";}
 		arr = favs.split(";");
 		document.getElementById("fav").innerHTML = "";
 		for(var i=0;i<arr.length;i++)
