--- a/fav.html
+++ b/fav.html
@@ -63,6 +63,7 @@
 		  <div class="mastfoot">
             <div class="inner">
               <p>Coffee Finder 2015</p>
+			  <p><img src="images/google.png"></p>
             </div>
           </div>
         </div>
