--- a/create.html
+++ b/create.html
@@ -46,19 +46,46 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="map.html">Nearby</a></li>
 				  <li><a href="fav.html">Favourites</a></li>
-                  <li class="active"><a href="#">About</a></li>
+                  <li><a href="about.html">About</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Coffee Finder</h1>
-            <p class="lead">Application version 1.0</p>
-			<p class="lead">Release date 05 July 2015</p>
-			<p class="lead">Background made by <a href="https://stocksnap.io/author/2781" title="Freepik">Jeremy Ricketts</a></p>
+            <h1 class="cover-heading">Create the perfect cup</h1>
           </div>
-
+		  <div class="col-xs-6 col-sm-4">
+			<h2>Cappuccino</h2>
+			<p><a class="btn btn-default" href="#" role="button">View details</a></p>
+			<br>
+		  </div>
+		  <div class="col-xs-6 col-sm-4">
+			<h2>Cappuccino</h2>
+			<p><a class="btn btn-default" href="#" role="button">View details</a></p>
+			<br>
+		  </div>
+		  <div class="col-xs-6 col-sm-4">
+			<h2>Cappuccino</h2>
+			<p><a class="btn btn-default" href="#" role="button">View details</a></p>
+			<br>
+		  </div>
+		  <div class="col-xs-6 col-sm-4">
+			<h2>Cappuccino</h2>
+			<p><a class="btn btn-default" href="#" role="button">View details</a></p>
+			<br>
+		  </div>
+		  <div class="col-xs-6 col-sm-4">
+			<h2>Cappuccino</h2>
+			<p><a class="btn btn-default" href="#" role="button">View details</a></p>
+			<br>
+		  </div>
+		  <div class="col-xs-6 col-sm-4">
+			<h2>Cappuccino</h2>
+			<p><a class="btn btn-default" href="#" role="button">View details</a></p>
+			<br>
+		  </div>
+		  
 		  <div class="mastfoot">
             <div class="inner">
               <p>Coffee Finder 2015</p>
