--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
+	<script src="http://demos.jquerymobile.com/1.4.5/js/jquery.mobile-1.4.5.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -52,17 +52,28 @@
             </div>
           </div>
 
-          <div class="inner cover">
-            <h1 class="cover-heading">Coffee Finder</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+          <div class="inner cover" data-role="page" id="home">
+            <h1 class="cover-heading">Find a nearby coffee shop</h1>
+            <p class="lead">We believe that coffee makes everything better and we know that a good cup of coffee is a pleasure to enjoy. Coffee Finer will help you find your coffee when you really need it wherever you are.</p>
             <p class="lead">
-              <a href="map.html" class="btn btn-lg btn-default"><i class="fa fa-search"></i>Find Nearby Coffee</a>
+              <a href="map.html" class="btn btn-lg btn-default">Find Nearby Coffee</a>
             </p>
+			<!--
+			<p>
+			  <h1 class="cover-heading">Or</h1>
+			</p>
+			<p class="lead">
+              <a href="create.html" class="btn btn-lg btn-default">Create the perfect cup</a>
+            </p>
+			<p>
+			  <h1 class="cover-heading">Or create your cup</h1>
+			</p>
           </div>
-
+		    -->
 		  <div class="mastfoot">
             <div class="inner">
               <p>Coffee Finder 2015</p>
+			  <p><img src="images/google.png"></p>
             </div>
           </div>
         </div>
@@ -74,6 +85,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
