--- a/map.html
+++ b/map.html
@@ -68,6 +68,7 @@ function handleNoGeolocation(errorFlag) {
 	alert('Error: The Geolocation service failed or not enabled.');
     var content = 'Error: The Geolocation service failed.';
   } else {
+	alert('Error: Your browser doesn\'t support geolocation or geolocation is not enabled.');
     var content = 'Error: Your browser doesn\'t support geolocation.';
   }
   var image = 'man.png';
