--- a/map.html
+++ b/map.html
@@ -40,13 +40,13 @@ function initialize() {
 	  var request = {
 		location: pyrmont,
 		radius: 50000,
-		//query: localStorage.getItem('cofeeFinderFavs')//'coffee shop'
-		name: localStorage.getItem('cofeeFinderFavs')
+		query: 'coffee shop'
+		//name: localStorage.getItem('cofeeFinderFavs')
 	  };
 	  infowindow = new google.maps.InfoWindow();
 	  var service = new google.maps.places.PlacesService(map);
-	  service.nearbySearch(request, callback);
-	  //service.textSearch(request, callback);
+	  //service.nearbySearch(request, callback);
+	  service.textSearch(request, callback);
 	  
 	  var image = 'man.png';
 	  var marker = new google.maps.Marker({
