--- a/fav.html
+++ b/fav.html
@@ -86,7 +86,11 @@
 		document.getElementById("fav").innerHTML = "";
 		for(var i=0;i<arr.length;i++)
 		{
-			document.getElementById("fav").innerHTML += arr[i] + "<br>";
+			document.getElementById("fav").innerHTML += '<a href=\"#" onclick="removeFromFavs(\'test\'); return false;">'+arr[i]+'</a><br><br>';
+		}
+		
+		funtion getFavMap(favString) {
+			window.location.href = 'favmap.html';
 		}
 	</script>
   </body>
