--- a/favmap.html
+++ b/favmap.html
@@ -40,12 +40,13 @@ function initialize() {
 	  var request = {
 		location: pyrmont,
 		radius: 2000,
-		query: 'coffee shop'
+		//query: 'coffee shop'
+		name: localStorage.getItem('cofeeFinderFavs')
 	  };
 	  infowindow = new google.maps.InfoWindow();
 	  var service = new google.maps.places.PlacesService(map);
-	  //service.nearbySearch(request, callback);
-	  service.textSearch(request, callback);
+	  service.nearbySearch(request, callback);
+	  //service.textSearch(request, callback);
 	  
 	  var image = 'man.png';
 	  var marker = new google.maps.Marker({
