--- a/fav.html
+++ b/fav.html
@@ -89,7 +89,7 @@
 			document.getElementById("fav").innerHTML += '<a href=\"#" onclick="removeFromFavs(\'test\'); return false;">'+arr[i]+'</a><br><br>';
 		}
 		
-		funtion getFavMap(favString) {
+		function getFavMap(favString) {
 			window.location.href = 'favmap.html';
 		}
 	</script>
