--- a/fav.html
+++ b/fav.html
@@ -86,10 +86,11 @@
 		document.getElementById("fav").innerHTML = "";
 		for(var i=0;i<arr.length;i++)
 		{
-			document.getElementById("fav").innerHTML += '<a href=\"#" onclick="getFavMap(\'test\'); return false;">'+arr[i]+'</a><br><br>';
+			document.getElementById("fav").innerHTML += '<a href="#" class="btn btn-lg btn-default" onclick="getFavMap(\''+arr[i]+'\'); return false;">Find Nearby '+arr[i]+'</a><br>';
 		}
 		
 		function getFavMap(favString) {
+			var favs = localStorage.setItem("cofeeFinderSearchText", favString);
 			window.location.href = 'favmap.html';
 			//alert('pressed');
 		}
