--- a/favmap.html
+++ b/favmap.html
@@ -41,7 +41,7 @@ function initialize() {
 		location: pyrmont,
 		radius: 2000,
 		//query: 'coffee shop'
-		name: localStorage.getItem('cofeeFinderFavs')
+		name: localStorage.getItem('cofeeFinderSearchText')
 	  };
 	  infowindow = new google.maps.InfoWindow();
 	  var service = new google.maps.places.PlacesService(map);
