--- a/fav.html
+++ b/fav.html
@@ -96,7 +96,7 @@
 		}
 		
 		function clearFavs() {
-			localStorage.setItem("cofeeFinderSearchText", "");
+			localStorage.setItem("cofeeFinderFavs", "");
 			window.location.replace("fav.html");
 		}
 	</script>
