--- a/favmap.html
+++ b/favmap.html
@@ -39,9 +39,10 @@ function initialize() {
 	  map.setCenter(pyrmont);
 	  var request = {
 		location: pyrmont,
-		radius: 50000,
+		//radius: 50000,
 		//query: 'coffee shop'
-		name: localStorage.getItem('cofeeFinderSearchText')
+		query: localStorage.getItem('cofeeFinderSearchText'),
+		types: ['cafe']
 	  };
 	  infowindow = new google.maps.InfoWindow();
 	  var service = new google.maps.places.PlacesService(map);
