--- a/favmap.html
+++ b/favmap.html
@@ -39,7 +39,7 @@ function initialize() {
 	  map.setCenter(pyrmont);
 	  var request = {
 		location: pyrmont,
-		//radius: 50000,
+		radius: 50000,
 		//query: 'coffee shop'
 		query: localStorage.getItem('cofeeFinderSearchText'),
 		types: ['cafe']
