--- a/favmap.html
+++ b/favmap.html
@@ -169,8 +169,8 @@ function addToFavs(fav) {
 			alert('Added '+fav + ' to favourites.');
 		}
 	} else {
-		// Sorry! No Web Storage support..
-		alert('Cannot add '+fav + ' to favourites.');
+		// Error! No Web Storage support..
+		alert('Error! No Web Storage support. Cannot add '+fav + ' to favourites.');
 	}
 }
 
@@ -185,8 +185,8 @@ function removeFromFavs(fav) {
 		localStorage.setItem("cofeeFinderFavs", favs);
 		alert('Removed '+fav + ' from favourites.');
 	} else {
-		// Sorry! No Web Storage support..
-		alert('Cannot remove '+fav + ' from favourites.');
+		// Error! No Web Storage support..
+		alert('Error! No Web Storage support. Cannot remove '+fav + ' from favourites.');
 	}
 }
 
